// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Heading" renders H! (dark theme) 1`] = `
<div
  css={[Function]}
>
  <h1
    css={[Function]}
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H1 1`] = `
<div
  css={[Function]}
>
  <h1
    css={[Function]}
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H1 as default 1`] = `
<div
  css={[Function]}
>
  <h1
    css={[Function]}
  >
    H1
  </h1>
</div>
`;

exports[`"Heading" renders H2 1`] = `
<div
  css={[Function]}
>
  <h2
    css={[Function]}
  >
    H2
  </h2>
</div>
`;

exports[`"Heading" renders H3 1`] = `
<div
  css={[Function]}
>
  <h3
    css={[Function]}
  >
    H3
  </h3>
</div>
`;

exports[`"Heading" renders H4 1`] = `
<div
  css={[Function]}
>
  <h3
    css={[Function]}
  >
    H4
  </h3>
</div>
`;
